--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+$transition : 1.5s;
+$fontsize : 18px;
+
+
+
+.navbar-area {
+
+    .navbar {
+        transition: $transition;
+        padding : 20px
+    }
+
+    ul {
+        padding-left: 0;
+        list-style-type: none;
+        margin-bottom: 0;
+    }
+
+    .navbar-nav {
+        margin-left: auto;
+    }
+    .nav-item {
+        position: relative;
+        padding: 0;
+        font-size: $fontsize;
+    }
+
+}
+
